--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,14 @@
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
-
-spring.profiles.active=edwads
+server.port=8080
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
+spring.security.oauth2.client.registration.github.clientId=da6e4dcd20e156b6eef7
+spring.security.oauth2.client.registration.github.clientSecret=f485c5b69d995f0e505f01456c88eb562d383635
+  
+#spring.profiles.active=edwads
